syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.rafacdev";
option java_outer_classname = "KeymanagerGrpc";

package br.com.rafacdev;

service KeymanagerRegistraGrpcService{
  rpc registra(RegistraChavePixRequest) returns (RegistraChaveResponse);
}

enum TipoDeChave{
  UNKNOW_TIPO_CHAVE = 0;
  CPF               = 1;
  CELULAR           = 2;
  EMAIL             = 3;
  ALEATORIA         = 4;
}

enum TipoDeConta{
  UNKNOW_TIPO_CONTA = 0;
  CONTA_CORRENTE    = 1;
  CONTA_POUPANCA    = 2;
}

message RegistraChavePixRequest {
  string clienteId        = 1;
  TipoDeChave tipoDeChave = 2;
  string chave            = 3;
  TipoDeConta tipoDeConta = 4;
}

message RegistraChaveResponse {
  string clienteId = 1;
  string pixId     = 2;
}